2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/reversewrapper.py (GFlagsReturn, GFlagsParam): Add type
	handlers for GFlags in reverse wrappers.
	(GtkTreePathParam): Add type handler for GtkTreePath* param.

2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.override: Declare PyGdkDevice_Type, now needed for some
	virtual method.

	* gtk/gtk.defs: Add a bunch of virtual method declarations for all
	non-deprecated gtk widgets.

	* gobject/pygobject.h: Add pyg_register_class_init to the API
	vtable and as macro, and PyGClassInitFunc typedef.

	* gobject/gobjectmodule.c (initgobject): Create
	pygobject_class_init_key, a GQuark that indentifiers the
	class_init data for a GType class.
	(pyg_register_class_init): Add, registers a class intialization
	function of type "int (*PyGClassInitFunc) (gpointer gclass,
	PyTypeObject *pyclass);"
	(pyg_run_class_init): Add, runs a stack of class initialization
	functions for a newly registered GObject class.
	(pyg_type_register): Call pyg_run_class_init right after the type
	is registered.
	Add pyg_register_class_init to pygobject_api_functions.

	* codegen/scanvirtuals.py: An utility script to scan for virtual
	methods in header files.  At the moment it is not very intelligent
	and doesn't distinguish between virtual methods and interface
	definitions.

	* codegen/defsparser.py (DefsParser.__init__): Initialize
	attribute 'virtuals', to hold list of object's virtual methods.
	(DefsParser.define_virtual): Adds a new virtual method.
	(DefsParser.find_virtuals): Returns list of virtual methods of an
	object.

	* codegen/definitions.py (ObjectDef.__init__): Add a
	class_init_func member variable.  Rename class MethodDef to
	MethodDefBase, subclass MethodDefBase as MethodDef, move code that
	checks for presence of 'c_name' from MethodDefBase into MethodDef.
	(MethodDefBase.write_defs): Rename to _write_defs, and don't write
	the initial "(define-method ...".