@@ -1,6 +1,16 @@
 Symbols, added in gtk+ between our merging with 2.5.x and 2.6.0
 They need to be added to the defs file, probably manually.
 
+gtk_label_get_max_width_chars
+gtk_label_set_max_width_chars
+gtk_label_get_angle
+gtk_label_set_angle
+gtk_label_get_single_line_mode
+gtk_label_set_single_line_mode
+gtk_button_get_image
+gtk_button_set_image
+gtk_progress_bar_get_ellipsize
+gtk_progress_bar_set_ellipsize
 gtk_icon_view_get_column_spacing
 gtk_icon_view_get_columns
 gtk_icon_view_get_item_width
@@ -13,21 +23,11 @@ gtk_icon_view_set_item_width
 gtk_icon_view_set_margin
 gtk_icon_view_set_row_spacing
 gtk_icon_view_set_spacing
-gtk_label_get_max_width_chars
-gtk_label_set_max_width_chars
 gtk_cell_renderer_stop_editing
 gtk_list_store_insert_with_values
 gtk_list_store_insert_with_valuesv
-gtk_text_layout_get_iter_at_position
+gtk_text_layout_get_iter_at_position (NOT MERGED INTERNAL API)
 gtk_text_view_get_iter_at_position
-gtk_label_get_angle
-gtk_label_set_angle
 gtk_dialog_set_alterantive_button_order_from_array
-gtk_button_get_image
-gtk_button_set_image
-gtk_progress_bar_get_ellipsize
-gtk_progress_bar_set_ellipsize
 gtk_action_get_accel_path
 gtk_file_filter_add_pixbuf_formats
-gtk_label_get_single_line_mode
-gtk_label_set_single_line_mode
