@@ -1,3 +1,12 @@
+2005-01-08  Johan Dahlin  <johan@gnome.org>
+
+	* Makefile.am: Add pygtk_postinstall.py
+	* docs/random/missing-symbols: Updated
+	* gtk/__init__.py: Deprecate gtk.idle_add and friends.
+	* gtk/gtk.defs:	Merge in 2.6 api, for GtkLabel functions, 
+	thanks to Gian Mario Tagliaretti, fixes bug #163296
+	* tests/test_thread.py: Don't use gtk.idle_add
+
 2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* codegen/reversewrapper.py (GFlagsReturn, GFlagsParam): Add type
